# vs-dirty

./: .gitignore  AdaptiveDenoise.py  LICENSE  README.md  gadMask.py  gadfunc.py  pyproject.toml  test.py
.github/workflows/: main.yml  publish.yml
Parser/: parser264_qp.py  parser_mb.py  parser_qp.py
addfunc/: __init__.py  adfunc.py  adfunc.pyi  adfunc.pyi.old  admask.py  adutils.py  adwrapper.py  dirtyfixer.py  retinex_gpu.py  sbore.py  test.py
blockparser/: parser264_qp.py  parser_mb.py  utils.py
dirtyfixer/: adtest.py  dirtyfunc.py
vs-flip/: main.py  vsflip.py
vsdirty/: __init__.py  adfunc.py  admask.py  adutils.py  dirtyfixer.py  retinex_gpu.py
