[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsdirty"
version = "0.3.0"
description = "VapourSynth wrappers for denoising, masking and edge fixing"
readme = "README.md"
authors = [{ name = "PingWer" }, { name = "Mhanz3500" }]
requires-python = ">=3.12"
dependencies = [
    "vsjetpack", #Just use latest version
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PingWer/vs-dirty"

[tool.setuptools.packages.find]
include = ["vsdirty*"]
